--- a/style.css
+++ b/style.css
@@ -11,18 +11,6 @@
   list-style: none;
 }
 
-
-/* Button Humberger */
-.navbar .burger {
-  display: none;
-  background: none;
-  border: none;
-  font-size: 1.5rem;
-  color: #111;
-  cursor: pointer;
-}
-
-
 /* button show up */
 #show {
   border: none;
@@ -53,7 +41,7 @@
   right: 70px;
   bottom: 80px;
   border-radius: 3px;
-  z-index: 99;
+  z-index: 1;
 }
 
 /* Navbar Style */
@@ -61,10 +49,9 @@
   width: 100vw;
   border-bottom: 1px solid #111;
   position: fixed;
+  z-index: 1;
   padding: 10px 40px;
   background: #eee;
-  z-index: 2;
-  overflow-x: hidden;
 }
 
 .navbar .navbar-group {
@@ -80,21 +67,19 @@
 }
 
 .navbar .navbar-group .navigation {
-  position: static;
-}
-
-.navbar .navbar-group .navigation ul {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: row;
   gap: 20px;
+  perspective: 500px;
 }
 
 .navbar .navbar-group .navigation a {
   color: #111;
   font-size: 1rem;
   position: relative;
+  z-index: -1;
 }
 
 .navbar .navbar-group .navigation a::before {
@@ -105,13 +90,12 @@
   z-index: 9;
   bottom: -5px;
   background: #111;
-  transition: .4s;
+  transition: .3s;
 }
 
 .navbar .navbar-group .navigation a:hover:before {
   width: 100%;
 }
-
 
 .navbar .navbar-group .download-app {
   color: #eee;
@@ -120,6 +104,18 @@
   padding: 8px 10px;
   border-radius: 100vw;
 }
+
+.navbar .burger {
+  position: relative;
+  z-index: 1;
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  color: #111;
+  cursor: pointer;
+}
+
 
 /* Home Section Style */
 #home {
@@ -196,6 +192,7 @@
   display: flex;
   overflow-x: hidden;
   justify-content: center;
+  position: relative;
 }
 
 #about .container {
@@ -268,6 +265,7 @@
   background: url('https://w0.peakpx.com/wallpaper/553/347/HD-wallpaper-assorted-color-clothes.jpg') no-repeat center /cover;
   width: 100%;
   overflow-x: hidden;
+  position: relative;
 }
 
 #produk .wrap {
@@ -358,6 +356,7 @@
   padding: 80px 0;
   width: 100%;
   overflow-x: hidden;
+  position: relative;
 }
 
 #testimoni .container {
@@ -430,6 +429,7 @@
   padding: 80px 0 30px;
   background: #eee;
   overflow-x: hidden;
+  position: relative;
 }
 
 #kontak .container {
@@ -596,42 +596,79 @@
   color: #000;
 }
 
+
 @media (max-width: 890px) {
 
   /* Hamburger Tobol Navbar Start */
-  .navbar {
-    overflow-x: auto;
-  }
-
-  .navbar .navbar-group {
-    justify-content: space-between;
-  }
-
   .navbar .burger {
     display: block;
   }
 
   .navbar .navbar-group .navigation {
-    background: #eee;
-    display: none;
-    width: 200px;
-    height: 100vh;
     position: absolute;
-    top: 55px;
-    right: 0;
-    z-index: 99;
-    padding: 20px;
-  }
-
-  .navbar .navbar-group .navigation ul {
+    display: none;
+    justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    gap: 20px;
+    top: 60px;
+    right: 10px;
+    gap: 0;
+    z-index: 1;
+    padding: 5px;
   }
 
+  .navbar .navbar-group .navigation a {
+    width: 200px;
+    background: #eee;
+    padding: 15px 20px;
+    z-index: 2;
+  }
+
+  .navbar .navbar-group .navigation a::before {
+    bottom: 5px;
+  }
+
+  .navbar .navbar-group .navigation a:hover:before {
+    width: 50%;
+  }
+
+  .navbar .navbar-group .navigation.active {
+    display: flex
+  }
+
+  /* Animation Menu List Navbar Start */
+  .navigation a {
+    animation: animationUhuy 600ms ease forwards;
+    transform: rotateY(90deg) rotateX(90deg);
+    transform-origin: top right;
+    opacity: 0;
+  }
+
+  .navigation a:nth-child(2) {
+    animation-delay: 300ms;
+  }
+
+  .navigation a:nth-child(3) {
+    animation-delay: 600ms;
+  }
+
+  .navigation a:nth-child(4) {
+    animation-delay: 900ms;
+  }
+
+  .navigation a:nth-child(5) {
+    animation-delay: 1.2s;
+  }
+
+  @keyframes animationUhuy {
+    to {
+      transform: rotate(0);
+      opacity: 1;
+    }
+  }
   /* Hamburger Tobol Navbar End */
 
-  /* Responsif Web page */
+  /* Responsif Home, About, produk page */
   #home .container {
     justify-content: space-around;
   }
@@ -674,6 +711,16 @@
     margin: 0 auto;
   }
 
+  .navbar .navbar-group .navigation {
+    top: 48px;
+    right: 2px;
+  }
+
+  .navbar .navbar-group .navigation a {
+    font-size: .9rem;
+  }
+
+
   .navbar .navbar-group .brand {
     font-size: 1.2rem;
   }
@@ -701,7 +748,6 @@
   }
 
   /* About & Produk*/
-
   #about .container .box-container {
     width: 400px;
   }
