--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@
   background: url('https://png.pngtree.com/background/20230519/original/pngtree-an-alley-with-many-racks-of-clothing-picture-image_2654850.jpg') no-repeat center/cover;
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
@@ -175,13 +175,22 @@
   margin-left: 10px;
 }
 
-#home .container .image-content .images {
-  width: 400px;
+#home .container .content {
+  width: 360px;
   height: 400px;
+  margin: 0 !important;
+}
+
+#home .container .image-content .images {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
 }
 
 #home .container .image-content .images img {
   border-radius: 6px;
+  cursor: pointer;
 }
 
 /* About Section Style */
@@ -295,7 +304,7 @@
 }
 
 #produk .container .title hr {
-  width: 100px;
+  width: 120px;
   margin: 5px auto;
 }
 
@@ -340,13 +349,11 @@
   border: 1px solid #111;
   padding: 8px 0;
   color: #111;
-  transition: ease-out .3s;
+  transition: .3s ease-in-out;
 }
 
 #produk .container .produk-content .card a:hover {
   background: #111;
-  border: 1px solid #111;
-  padding: 8px 0;
   color: #eee;
 }
 
@@ -379,6 +386,7 @@
   border: 1px solid #111;
   border-radius: 4px;
   padding: 20px;
+  cursor: pointer;
 }
 
 #testimoni .testimoni-content .testimoni-item .info {
@@ -453,10 +461,15 @@
 }
 
 #kontak .container .kontak-container {
-  border: 1px solid #fff;
+  border: 1px solid #111;
   border-radius: 5px;
-  background: #111;
-  width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  width: max-content;
+  gap: 30px;
 }
 
 #kontak .container .kontak-container .kontak-box {
@@ -467,7 +480,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  color: #eee;
+  color: #111;
 }
 
 #kontak .container .kontak-container .info p {
@@ -483,7 +496,7 @@
 }
 
 #kontak .container .kontak-container .info .form input, textarea {
-  border: 1px solid #fff;
+  border: 1px solid #111;
   border-radius: 6px;
   padding: 10px 15px;
   font-size: 18px;
@@ -534,7 +547,12 @@
 
 #footer .container .box.b {
   padding: 10px;
+}
 
+#footer .container .box.b .toko {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
 }
 
 #footer .container .box p {
@@ -599,7 +617,7 @@
 
 @media (max-width: 890px) {
 
-  /* Hamburger Tobol Navbar Start */
+  /* Hamburger Tombol Navbar Start */
   .navbar .burger {
     display: block;
   }
@@ -666,7 +684,8 @@
       opacity: 1;
     }
   }
-  /* Hamburger Tobol Navbar End */
+
+  /* Hamburger Tombol Navbar End */
 
   /* Responsif Home, About, produk page */
   #home .container {
@@ -702,11 +721,20 @@
   #produk .container .produk-content {
     max-width: 700px;
   }
+
+
+  #kontak .container .kontak-container {
+    flex-direction: column;
+  }
 }
 
 @media(max-width: 430px) {
 
   /* Navbar */
+  .navbar {
+    padding: 10px 30px;
+  }
+
   .navbar .navbar-group {
     margin: 0 auto;
   }
@@ -742,9 +770,10 @@
     font-size: .9rem;
   }
 
-  #home .container .image-content .images {
-    width: 250px;
+  #home .container .content {
+    width: 230px;
     height: 250px;
+    margin: 0 auto !important;
   }
 
   /* About & Produk*/
@@ -793,7 +822,7 @@
   }
 
   /* Testimoni */
-  #kontak .container .kontak-container {
+  #kontak .container .kontak-container .map {
     width: 300px;
   }
 
@@ -838,5 +867,22 @@
     font-size: .7rem;
     bottom: 70px;
     right: 30px;
+  }
+}
+
+@media (max-width: 330px) {
+  #home {
+    height: auto;
+  }
+
+  #home .container {
+    padding: 70px 30px 30px;
+    height: auto;
+    overflow-y: hidden;
+  }
+
+  #home .container .content {
+    width: 180px;
+    height: 190px;
   }
 }
