--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@
   background: rgba(17, 17, 17, .9);
   backdrop-filter: blur(5px);
   padding-bottom: 30px;
+  overflow: hidden;
 }
 
 #produk .container {
@@ -294,6 +295,13 @@
 
 #produk .container #hide {
   display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+#produk .container #hide.active {
+  display: flex;
 }
 
 #produk .container .title {
@@ -308,12 +316,34 @@
   margin: 5px auto;
 }
 
+#produk .container .produk-filter {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+#produk .container .produk-filter button {
+  background: none;
+  border: 1px solid #eee;
+  padding: 3px 8px;
+  color: #eee;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: all .3s;
+}
+
+#produk .container .produk-filter button:active,
+#produk .container .produk-filter button.active {
+  background: #eee;
+  color: #111;
+}
+
 #produk .container .produk-content {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
+  flex-direction: row;
 }
 
 #produk .container .produk-content .card {
@@ -326,6 +356,7 @@
   display: grid;
   gap: 8px;
   color: #111;
+  margin: 10px;
 }
 
 #produk .container .produk-content .card .images {
